--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque accusamus 
                 exercitationem, nulla voluptatibus quae distinctio voluptates eos tempore minus, 
                 sunt molestias maxime excepturi reprehenderit, doloremque corporis illo ullam deleniti commodi!
+                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem provident fugiat, quia similique dolore possimus repellat, ad pariatur laborum expedita labore quidem? Odit sed adipisci atque reprehenderit aliquid provident sit!
             </div>
         </div> 
         <div class="content">
